--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -1,15 +1,66 @@
-.banner{
-    height: 448px;
+.banner {
     object-fit: contain;
     margin: 0px;
     width: 100%;
-    height: 900px;
+    height: fit-content;
     position: relative;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
-.video{
+
+.video {
     width: 100%;
-    margin: 0px;
+    height: auto;
     position: absolute;
+    margin: 0px;
     opacity: 0.8;
+}
+
+.banner-content {
+    position: absolute;
+    margin-left: 100px;
+    margin-top: 200px;
+}
+
+.banner-title {
+    color: wheat;
+    font-size: 3rem;
+}
+
+.banner-description {
+    color: wheat;
+    line-height: 1.3;
+    padding-top: 1rem;
+    font-size: 1rem;
+    max-width: 360px;
+    height: 80px;
+}
+
+.banner-button {
+    cursor: pointer;
+    color: wheat;
+    outline: none;
+    border: none;
+    font-weight: 700;
+    border-radius: 0.2vw;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    margin-right: 1rem;
+    padding-top: 0.5rem;
+    background-color: rgba(51, 51, 51, 0.5);
+    padding-bottom: 0.5rem;
+    height: 40px;
     
+}
+
+.banner-button:hover {
+    color: #111;
+    background-color: wheat;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    transform: scale(1.08);
+    transition: all 1s;
+}
+
+.banner--fadeBottom {
+    height: 760px;
+    background: linear-gradient(rgba(0, 0, 0, 1), #111);
 }
