--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -3,6 +3,8 @@
     width: 100%;
     position: fixed;
     z-index: 1;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
 
 }
 .nav_wood { 
@@ -13,6 +15,8 @@
 .nav-components{
     display: flex;
     margin-top: 25px;
+    width: 50%;
+    
 }
 
 .nav-items {
@@ -38,8 +42,28 @@
     color: wheat;
     display: flex;
     text-decoration: none;
-    width: auto;
+    width: 20%;
     height: auto;
     padding-left: 10px;
+}
+
+.register{
+    display: flex;
+    color: wheat;
+    background-color: rgba(51, 51, 51, 0.5);
+    border-radius: 0.2vw;
     text-decoration: none;
+    width: auto;
+    height: 20px;
+    margin: 25px;
+    padding: 10px;
+}
+
+.register:hover{
+    color: #111;
+    background-color: wheat;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    transform: scale(1.08);
+    transition: all 1s;
+
 }
