--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -19,6 +19,7 @@
     position: absolute;
     margin-left: 100px;
     margin-top: 200px;
+    z-index: 2;
 }
 
 .banner-title {
@@ -49,7 +50,7 @@
     background-color: rgba(51, 51, 51, 0.5);
     padding-bottom: 0.5rem;
     height: 40px;
-    
+
 }
 
 .banner-button:hover {
@@ -62,5 +63,6 @@
 
 .banner--fadeBottom {
     height: 760px;
+    opacity: 0.7;
     background: linear-gradient(rgba(0, 0, 0, 1), #111);
 }
