--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -64,5 +64,6 @@
 .banner--fadeBottom {
     height: 760px;
     opacity: 0.7;
-    background: linear-gradient(rgba(0, 0, 0, 1), #111);
+    background: linear-gradient(#171009, #654321);
+    mix-blend-mode: multiply;
 }
