--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -5,6 +5,7 @@
     height: fit-content;
     position: relative;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
 .video {
@@ -50,6 +51,7 @@
     background-color: rgba(51, 51, 51, 0.5);
     padding-bottom: 0.5rem;
     height: 40px;
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 
 }
 
@@ -59,6 +61,7 @@
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     transform: scale(1.08);
     transition: all 1s;
+    text-shadow: none;
 }
 
 .banner--fadeBottom {
