--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -5,6 +5,7 @@
     z-index: 1;
     transition-timing-function: ease-in;
     transition: all 0.5s;
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 
 }
 .nav_wood { 
@@ -35,6 +36,7 @@
     color: black;
     transform: scale(1.05);
     transition: 0.5s;
+    text-shadow: none;
 }
 
 .logo{
@@ -65,5 +67,6 @@
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     transform: scale(1.08);
     transition: all 1s;
+    text-shadow: none;
 
 }
