--- a/frontend/src/css/ourtrainers.css
+++ b/frontend/src/css/ourtrainers.css
@@ -4,6 +4,7 @@
     margin-top:0px !important;
     background:transparent linear-gradient(318deg, #7B6F5A 0%, #F57A2D 34%, #7B3D16 70%, #411900 100%) 0% 0% no-repeat padding-box; 
     overflow: scroll;
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 } 
 
 .ourtrainer-main{
