--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -29,13 +29,14 @@
     text-decoration: none;
     margin-right: 50px;
     margin-left: 10px;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
 }
 
 .nav-items:hover{
     background-color: wheat;
     color: black;
     transform: scale(1.05);
-    transition: 0.5s;
     text-shadow: none;
 }
 
@@ -59,6 +60,8 @@
     height: 20px;
     margin: 25px;
     padding: 10px;
+    transition-timing-function: ease-in;
+    transition: all 0.5s;
 }
 
 .register:hover{
@@ -66,7 +69,6 @@
     background-color: wheat;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     transform: scale(1.08);
-    transition: all 1s;
     text-shadow: none;
 
 }
