--- a/frontend/src/css/ourtrainers.css
+++ b/frontend/src/css/ourtrainers.css
@@ -2,8 +2,8 @@
     display:flex;
     flex-direction:column;
     margin-top:0px !important;
-    background:transparent linear-gradient(318deg, #7B6F5A 0%, #F57A2D 34%, #7B3D16 70%, #411900 100%) 0% 0% no-repeat padding-box; 
-    overflow: scroll;
+    background: linear-gradient( to bottom right,#654321, #302113);
+    overflow:hidden;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 } 
 
@@ -16,7 +16,6 @@
 }
 
 .ourtrainer-title{
-    font-family: Segoe 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     align-self: center;
     font-size: 60px;
     font-weight: normal;
