--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -66,8 +66,15 @@
 }
 
 .banner--fadeBottom {
-    height: 759px;
+    height: fit-content;
     opacity: 0.65;
     background: linear-gradient(#171009, #654321);
     mix-blend-mode: multiply;
 }
+
+@media only screen and (min-width: 970px) {
+    .banner--fadeBottom{
+        height: 1070px;
+    }
+}
+
