--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -66,15 +66,17 @@
 }
 
 .banner--fadeBottom {
-    height: fit-content;
+    height: 798px;
     opacity: 0.65;
     background: linear-gradient(#171009, #654321);
     mix-blend-mode: multiply;
 }
 
-@media only screen and (min-width: 970px) {
+@media only screen and (min-width: 1920px) {
     .banner--fadeBottom{
         height: 1070px;
     }
 }
+
+
 
