--- a/frontend/src/css/Tutorials.css
+++ b/frontend/src/css/Tutorials.css
@@ -14,8 +14,7 @@
 
 .card {
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    width: 369px;
-    height: 536px;
+    max-width: 350px;
     text-align: center;
     object-fit: contain;
     transition-timing-function: ease-in;
@@ -32,7 +31,7 @@
 
 .tutorial-image {
     align-self: center;
-    width: 368px;
+    width: 100%;
     height: 250px;
     margin-bottom: 10px;
 }
@@ -45,26 +44,29 @@
     align-self: end;
     margin-top: 155px;
     margin-right: 10px;
-   
-    
+     
 }
 
 .tutorial-button {
     cursor: pointer;
     color: wheat;
     outline: none;
-    border-radius: 15px;
+    border: none;
     font-weight: 700;
+    padding-left: 2rem;
+    padding-right: 2rem;
+    padding-top: 0.5rem;
+    padding-bottom: 0.5rem;
+    margin-top: auto;
     height: 40px;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     background: linear-gradient(#171009c0, #654321);
-    width: 60px;
-    height: 36px;
+    text-align: center;
+    width: 100%;
+    height: 50px;
+    object-fit: contain;
     transition-timing-function: ease-in;
     transition: all 1s;
-    align-self: flex-start;
-    margin-left: 20px;
-    margin-bottom: 10px;
 }
 
 .tutorial-button:hover {
@@ -96,6 +98,7 @@
     font-family: Avenir;
     font-style: 500;
     margin-bottom: 0px;
+    font-weight: bold;
 }
 
 .tutorial-name {
