--- a/frontend/src/css/Comments.css
+++ b/frontend/src/css/Comments.css
@@ -11,8 +11,9 @@
 }
 
 .comment--collectionpictures{
-display: flex;
-justify-content: space-between;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 0px;
 }
 
 .comment--picture{
@@ -32,6 +33,7 @@ justify-content: space-between;
 
 .comment--linedivider{
     margin-top:0px; 
+    margin-bottom:10px;
 }
 
 .comment--commentname{
