--- a/frontend/src/css/Categories.css
+++ b/frontend/src/css/Categories.css
@@ -3,6 +3,7 @@
     flex-flow: row wrap;
     justify-content: space-evenly;
     margin: 50px;
+    margin-bottom: 100px !important;
 }
 
 .flex-container>div {
