--- a/frontend/src/css/Comments.css
+++ b/frontend/src/css/Comments.css
@@ -2,13 +2,17 @@
     display: flex;
     flex-direction: column;
     width:350px;
-    height:200px;
-    border: 1px solid #fff;
+    height:auto;
+    border: none;
     padding-left: 15px;
-    background-color:white;
+    background-color:wheat;
     border: 0.5px solid black;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    object-fit: contain;
+    margin-bottom: 50px;
+    margin-top: 50px;
 }
+
 
 .comment--collectionpictures{
     display: flex;
@@ -38,14 +42,15 @@
 
 .comment--commentname{
     font-weight: bold;
-    font-size: 15px;
+    font-size: 17px;
     margin-bottom:0px;
     margin-top:0px;
+    color: #171009;
 }
 
 .comment--message{
-    color: rgba(0, 0, 0, 0.548);
-    font-size: 10px;
+    color: #111;
+    font-size: 15px;
 }
 
 .comment-main{
@@ -64,8 +69,12 @@
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin-top: 100px;
 }
 
 .italic{
-    color:rgba(0, 0, 0, 0.575)
+    color: rgb(214, 163, 68);
+    font-size: 15px;
+    text-shadow: 1px 2px 4px rgba(0, 0, 0), 1px 1px 1px rgba(0, 0, 0);
+
 }
