--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -2,7 +2,7 @@
     object-fit: contain;
     margin: 0px;
     width: 100%;
-    height: fit-content;
+    height: 758px;
     position: relative;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
@@ -30,10 +30,10 @@
 
 .banner-description {
     color: wheat;
-    line-height: 1.3;
+    line-height: 1.5;
     padding-top: 1rem;
     font-size: 1rem;
-    max-width: 360px;
+    max-width: 500px;
     height: 80px;
 }
 
