--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -1,14 +1,15 @@
-/* .flex-container {
-    justify-content: space-evenly;
-    margin: 10px;
+.enroll-btn{
+    width: 20%;
+    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
+    transition-timing-function: ease-in;
+    transition: all 1s;
 }
 
-.flex-container>div {
-    display: flex;
-    flex-flow: column;
-    background-color: wheat;
-    align-items: center;
-} */
+.enroll-btn:hover{
+    transform: scale(1.08);
+}
 
 .card-lessons {
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
