--- a/frontend/src/css/SubCategories.css
+++ b/frontend/src/css/SubCategories.css
@@ -1,8 +1,36 @@
+.subCategory-banner {
+    object-fit: contain;
+    margin: 0px;
+    width: 100%;
+    height: 800px;
+    position: relative;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    margin-bottom: 50px;
+}
+
+.subCategory-banner--fadeBottom {
+    height: 800px;
+    opacity: 0.65;
+    width: 100%;
+    position: absolute;
+    background: linear-gradient(#171009, #654321);
+    mix-blend-mode: multiply;
+}
+
+.subCategory-banner-image {
+    width: 100%;
+    height: 800px;
+    position: relative;
+    margin: 0px;
+    opacity: 0.8;
+}
+
 .flex-container {
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    margin: 50px;
+    margin: 0px;
 }
 
 .flex-container>div {
@@ -22,7 +50,8 @@
     cursor: pointer;
     margin-bottom: 50px;
     overflow: hidden;
-    
+    position: relative;
+
 }
 
 .card:hover {
@@ -91,23 +120,23 @@
     text-align: justify;
 }
 
-.get-started{
+.get-started {
     text-align: center;
     width: 100%;
     font-size: 50px;
     color: #171009
 }
 
-.new-skill{
+.new-skill {
     text-align: center;
     width: 100%;
     font-size: 20px;
-    font-weight:lighter;
+    font-weight: lighter;
     color: whitesmoke;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.levels{
+.levels {
     text-align: center;
     width: 100%;
     font-size: 15px;
@@ -116,7 +145,7 @@
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.link-categories{
+.link-categories {
     text-decoration: none;
     color: inherit;
     margin-top: auto;
