--- a/frontend/src/css/Tutorials.css
+++ b/frontend/src/css/Tutorials.css
@@ -1,3 +1,31 @@
+.tutorial-banner {
+    object-fit: contain;
+    margin: 0px;
+    width: 100%;
+    height: 800px;
+    position: relative;
+    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    margin-bottom: 50px;
+}
+
+.tutorial-banner--fadeBottom {
+    height: 800px;
+    opacity: 0.65;
+    width: 100%;
+    position: absolute;
+    background: linear-gradient(#171009, #654321);
+    mix-blend-mode: multiply;
+}
+
+.tutorial-banner-image {
+    width: 100%;
+    height: 800px;
+    position: relative;
+    margin: 0px;
+    opacity: 0.8;
+}
+
 .flex-container {
     display: flex;
     flex-flow: row wrap;
