--- a/frontend/src/css/Banner.css
+++ b/frontend/src/css/Banner.css
@@ -68,7 +68,7 @@
 .banner--fadeBottom {
     height: 758px;
     opacity: 0.65;
-    background: linear-gradient(#171009, #654321);
+    background: linear-gradient(#171009, wheat);
     mix-blend-mode: multiply;
 }
 
