--- a/frontend/src/css/SubCategories.css
+++ b/frontend/src/css/SubCategories.css
@@ -21,7 +21,7 @@
 .subCategory-banner-image {
     width: 100%;
     height: 650px;
-    position: relative;
+    position: absolute;
     margin: 0px;
     opacity: 0.8;
 }
@@ -30,7 +30,7 @@
     display: flex;
     flex-flow: row wrap;
     justify-content: space-evenly;
-    margin: 0px;
+    margin: 0px !important;
 }
 
 .flex-container>div {
