--- a/frontend/src/css/Payment.css
+++ b/frontend/src/css/Payment.css
@@ -74,14 +74,14 @@ form {
 }
 
 .credit-card{
-    background-color: wheat;
+    background-color: white;
     display: flex;
     flex-direction: column;
     border: 1px solid gray;
-    width: 50%;
-    margin-top: 100px !important;
-    margin-bottom: 100px !important;
-    margin: auto;
+    width: 500px;
+    padding-top: 30px;
+    margin-left: 600px;
+    margin-bottom: 50px;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
