--- a/frontend/src/css/Login.css
+++ b/frontend/src/css/Login.css
@@ -17,7 +17,7 @@
 .login-card2 {
     z-index: 2;
     overflow: hidden;
-    position: relative;
+    position: absolute;
     width: 400px;
     height: 650px;
     background: transparent linear-gradient(155deg, #1A388F 0%, #4860A5 100%);
@@ -25,17 +25,18 @@
     border-radius: 2vw;
     opacity: 1;
     float: right;
-    margin-right: -450px;
+    margin-left: 300px;
     margin-top: -50px;
 }
 
 .login-img-home {
     z-index: 2;
+    position: absolute;
     width: 900px;
     height: auto;
     margin-top: 20px;
     opacity: 1;
-    margin-left: -600px;
+    margin-left: -450px;
 }
 
 .login-Title {
