--- a/frontend/src/css/SubCategories.css
+++ b/frontend/src/css/SubCategories.css
@@ -61,10 +61,9 @@
     align-self: center;
     width: 100%;
     height: 270px;
-    margin-bottom: 10px;
 }
 
-.card-button {
+.card-button-sub {
     cursor: pointer;
     color: wheat;
     outline: none;
@@ -74,10 +73,9 @@
     padding-right: 2rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    margin-top: auto;
     height: 40px;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    background: linear-gradient(#171009c0, #654321);
+    background-color: #20160c;
     text-align: center;
     width: 100%;
     height: 50px;
@@ -87,7 +85,6 @@
 }
 
 .card-button:hover {
-    background: linear-gradient(#171009, #3b2814);
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     text-shadow: none;
 }
