--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -1,13 +1,19 @@
-.enroll-btn{
+.enroll-btn {
     width: 20%;
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
     transition-timing-function: ease-in;
     transition: all 1s;
+    pointer-events: none;
+    opacity: 0.7;
+}
+.enroll-btn-on {
+    pointer-events: all;
+    opacity: 1;
 }
 
-.enroll-btn:hover{
+.enroll-btn-on:hover {
     transform: scale(1.08);
 }
 
@@ -21,13 +27,13 @@
     margin: auto;
     overflow: hidden;
     background-color: wheat;
-    margin-bottom: 50px;   
-    pointer-events:none;
+    margin-bottom: 50px;
+    pointer-events: none;
     opacity: 0.6;
 }
 
-.card-lessons-activated{
-    pointer-events:all;
+.card-lessons-activated {
+    pointer-events: all;
     opacity: 1;
 }
 
@@ -35,18 +41,18 @@
     transform: scale(1.05);
 }
 
-.lesson-img{
+.lesson-img {
     float: left;
     width: 200px;
     height: auto;
 }
 
-.lesson-info{
+.lesson-info {
     float: left;
     text-align: justify;
 }
 
-.lesson-start{
+.lesson-start {
     float: right;
     margin: 50px;
 }
@@ -71,6 +77,7 @@
     object-fit: contain;
     transition-timing-function: ease-in;
     transition: all 1s;
+ 
 }
 
 .card-button-lesson:hover {
@@ -101,23 +108,23 @@
     text-align: justify;
 }
 
-.get-started{
+.get-started {
     text-align: center;
     width: 100%;
     font-size: 50px;
     color: #171009
 }
 
-.new-skill{
+.new-skill {
     text-align: center;
     width: 100%;
     font-size: 20px;
-    font-weight:lighter;
+    font-weight: lighter;
     color: whitesmoke;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.levels{
+.levels {
     text-align: center;
     width: 100%;
     font-size: 15px;
@@ -126,7 +133,7 @@
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.link-lesson{
+.link-lesson {
     text-decoration: none;
     color: inherit;
     margin-top: auto;
