--- a/frontend/src/css/Logout.css
+++ b/frontend/src/css/Logout.css
@@ -10,6 +10,7 @@
     padding: 0px !important;
     margin:0px !important;
     margin-top: -5px !important;
+    cursor: pointer;
 }
 
 .logout:hover {
