--- a/frontend/src/css/Tutorials.css
+++ b/frontend/src/css/Tutorials.css
@@ -21,7 +21,7 @@
 .tutorial-banner-image {
     width: 100%;
     height: 650px;
-    position: relative;
+    position: absolute;
     margin: 0px;
     opacity: 0.8;
 }
