--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -57,6 +57,11 @@
     margin: 50px;
 }
 
+.dayData{
+    float: left;
+    margin: 50px; 
+}
+
 .card-button-lesson {
     cursor: pointer;
     color: wheat;
