--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -1,5 +1,5 @@
 .enroll-btn {
-    width: 20%;
+    width: 30%;
     margin: auto;
     margin-top: 50px;
     margin-bottom: 50px;
@@ -15,6 +15,28 @@
 
 .enroll-btn-on:hover {
     transform: scale(1.08);
+}
+
+.enrollment{
+    display: flex;
+    flex-direction: row;
+    width: 30%;
+    margin: auto;
+}
+
+.sign-in-request{
+    color: wheat;
+    width:auto;
+    border-radius: 20px;
+    height: 20px;
+    margin: auto;
+    background-color: #171009;
+    padding: 10px;
+    margin-left: -100px;
+}
+
+.sign-in-done{
+    display: none;
 }
 
 .card-lessons {
