--- a/frontend/src/css/SubCategories.css
+++ b/frontend/src/css/SubCategories.css
@@ -57,7 +57,7 @@
     transform: scale(1.08);
 }
 
-.category-image {
+.subCategory-image {
     align-self: center;
     width: 100%;
     height: 270px;
@@ -69,11 +69,11 @@
     outline: none;
     border: none;
     font-weight: 700;
+    margin-top: -5px;
     padding-left: 2rem;
     padding-right: 2rem;
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
-    height: 40px;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
     background-color: #20160c;
     text-align: center;
@@ -89,14 +89,13 @@
     text-shadow: none;
 }
 
-.category-title {
+.subCategory-title {
     font-size: 20px;
     color: wheat;
-    margin: 5px;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.category-name {
+.subCategory-name {
     cursor: pointer;
     color: wheat;
     outline: none;
@@ -110,7 +109,7 @@
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
 
-.category-description {
+.subCategory-description {
     padding: 20px;
     padding-bottom: auto;
     text-align: justify;
