--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -24,6 +24,14 @@
     margin: auto;
 }
 
+.starting{
+    display: flex;
+    flex-direction: row;
+    width: 40%;
+    float: right;
+    margin-right: -50px;
+}
+
 .sign-in-request{
     color: wheat;
     width:auto;
@@ -38,6 +46,7 @@
 .sign-in-done{
     display: none;
 }
+
 
 .card-lessons {
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
@@ -81,7 +90,7 @@
 
 .dayData{
     float: left;
-    margin: 50px; 
+    margin-top: 50px; 
 }
 
 .card-button-lesson {
