--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -1,190 +1,75 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Shippori+Antique+B1&display=swap');
+ @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Shippori+Antique+B1&display=swap');
 
 
-.traineecard1 {
-    width: 263px;
-    height: 280px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    opacity: 1;
+.profile-content{
+    display:flex;
+    flex-direction: column;
     align-items: center;
-    margin-left: auto;
+    border: 2px solid black;
+    width: 300px;
+    height: 550px;
 }
 
-.traineecard2 {
-    display: grid;
-    padding-left: 2%;
-    width: 435px;
-    height: 500px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    border-radius: 5px;
-    opacity: 1;
-    margin-left: 20px;
-    border: none;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+.profile-edit{
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    border: 2px solid black;
+    width: 700px;
+    height: 650px;
+    margin-left: -500px;
 }
 
-.traineecard3 {
-    display: grid;
-    width: 263px;
-    height: auto;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    opacity: 1;
-    margin: auto;
-    margin-top: 0px;
-    margin-left: 20px;
-    padding: 20px;
+.profile-edit-div{
+    margin-top: -29px;
 }
 
-.titreProfile {
-    font-size: 50px;
-    text-align: center;
+.profile-show{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    height: 550px;
+    margin-top: 50px;
+    margin-bottom: 120px;
+ 
 }
 
-.traineepic {
-    border-radius: 5px;
-    width: 245px;
-    height: 142px;
-    background: transparent 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    opacity: 1;
+.profile-photo{
+    width: 150px;
+    border-radius: 50%;
+}
+
+.profile-text{
+    text-decoration: underline;
+}
+
+.nav{
+    position: relative;
+}
+
+.Profile-field{
+    width: 200px;
+    Height: 30px;
+    padding-left: 10px; 
+}
+
+.Profile-label{
     margin-top: 8px;
-    margin-left: 8px;
-    align-items: center;
 }
 
-.traineeradio {
-    margin-top: 10px;
-    margin-left: 8px;
-    align-self: center;
+.traineebtnSave1{
+    width: 220px;
+    margin-top: 25px;
+    height: 35px;
 }
 
-.traineebtnSave1 {
-    margin-left: 8px;
-    margin-top: 10px;
-    width: 86%;
-    height: 28px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    opacity: 1;
-    margin-bottom: 10px;
-}
-
-.traineebtnSave1:hover {
-    background-color: #7C3000;
-    color: #ffffff;
-}
-
-.traineebtnSave {
-    margin-left: 8px;
-    margin-top: 10px;
-    width: 94%;
-    height: 28px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    opacity: 1;
-    margin-bottom: 10px;
-}
-
-.traineebtnSave:hover {
-    background-color: #7C3000;
-    color: #ffffff;
-}
-
-.txtchange {
-    width: 100%;
-    font-size: 20px !important;
-    line-height: 25px !important;
-    font-weight: 500 !important;
-    text-align: center;
-    font: normal normal normal 15px/18px Avenir;
-    letter-spacing: 0px;
-    color: 7C3000;
-    opacity: 1;
-}
-
-.txtSave {
-    width: 32px;
-    height: 20px;
-    text-align: center;
-    font: normal normal normal 15px/18px Avenir;
-    letter-spacing: 0px;
-    color: #7C3000;
-    opacity: 1;
-}
-
-.Profile-field {
-    width: 236px;
-    height: 20px;
-    background: #FFFFFF 0% 0% no-repeat padding-box;
-    box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
-    border: none;
-    border-radius: 5px;
-    opacity: 1;
-    font-size: 15px;
-    color: #171009;
-    text-align: center;
-    padding: 3%;
-}
-
-.traineeradio {
-    margin-top: 10px;
-    margin-bottom: 10px;
-    align-self: center;
-}
-
-.alin {
-    top: 10px !important;
-    text-align: right !important;
-    padding-right: 20px;
-
-}
-
-.d {
-    float: left;
-    width: 25%;
+.alert-danger1{
+    color: #823200;
+    margin-bottom:0px;
     margin-top: 20px;
-}
-
-.e {
-    float: left;
-    width: 75%;
-    margin-top: 6px;
-}
-
-.traineebtn {
-    background-color: #70707000 !important;
-    padding-left: 15px !important;
-}
-
-.imgtuto {
-    width: 50px;
-    height: 50px;
-    background-color: #7C3000;
-    padding: 3px;
-    margin: auto;
-}
-
-.txtTuto {
-    margin-left: 10px;
-    margin-right: 20px;
-    font-size: 13px;
-}
-
-.checkbtntrainee {
-    width: 50px;
-    height: 50px;
-    background-color: #ffffff;
-    padding: 3px;
-    margin: auto;
+    margin-left: 58px !important;
+    font-weight: bold;
+    border: 1px solid  #823200;
+    width: 355px;
+    padding: 5px
 }
