--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -9,19 +9,21 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
     width: 300px;
-    height: 550px;
+    height: 700px;
+    background-color: white;
+    box-shadow: 6px 0px 12px #000000A3;
+    margin-bottom: 20px !important;
 }
 
 .profile-edit{
     display:flex;
     flex-direction: column;
     align-items: center;
-    border: 2px solid black;
     width: 700px;
-    height: 650px;
-    margin-left: -500px;
+    height: 700px;
+    background-color: white;
+    box-shadow: 6px 0px 12px #000000A3;
 }
 
 .profile-edit-div{
@@ -34,17 +36,27 @@
     justify-content: space-around;
     height: 550px;
     margin-top: 50px;
-    margin-bottom: 120px;
+    margin-bottom: 200px;
  
 }
 
 .profile-photo{
-    width: 150px;
-    border-radius: 50%;
+    width: 230px;
+    height: 150px;
+    border-radius: 10%;
+    margin-top: 35px;
+    margin-bottom: 25px;
 }
 
 .profile-text{
-    text-decoration: underline;
+    border: 1px solid #A48A70;
+    border-radius: 5px;
+    background: #FFFFFF 0% 0% no-repeat padding-box;
+    box-shadow: 0px 3px 6px #00000029;
+    width: 240px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    padding-left: 10px;
 }
 
 /* .nav{
@@ -55,16 +67,25 @@
     width: 200px;
     Height: 30px;
     padding-left: 10px; 
+    border-radius: 5px;
+}
+
+.profile-title{
+    margin-bottom: 0px;
 }
 
 .Profile-label{
-    margin-top: 8px;
+    margin-top: 10px;
+    margin-bottom: 5px;
 }
 
 .traineebtnSave1{
     width: 220px;
     margin-top: 25px;
     height: 35px;
+    background: transparent linear-gradient(293deg, #302113 0%, #904414 100%) 0% 0% no-repeat padding-box;
+    box-shadow: 0px 0px 12px #0000005C;
+    color:white;
 }
 
 .alert-danger1{
@@ -77,3 +98,28 @@
     width: 355px;
     padding: 5px
 }
+
+.profile-tutorials{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 450px;
+    height: 700px;
+    background-color: white;
+    box-shadow: 6px 0px 12px #000000A3;
+}
+
+.profile-table{
+    border: 1px solid black;
+    width: 439px;
+    margin-top: 25px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-left: 5px;   
+}
+
+.profile-table:hover{
+    background-color: wheat;
+}
+
+
