--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -9,8 +9,8 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    width: 300px;
-    height: 700px;
+    width: 380px;
+    height: 800px;
     background-color: white;
     box-shadow: 6px 0px 12px #000000A3;
     margin-bottom: 20px !important;
@@ -34,7 +34,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    height: 550px;
+    height: 700px;
     margin-top: 50px;
     margin-bottom: 200px;
  
@@ -53,7 +53,7 @@
     border-radius: 5px;
     background: #FFFFFF 0% 0% no-repeat padding-box;
     box-shadow: 0px 3px 6px #00000029;
-    width: 240px;
+    width: 300px;
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
@@ -103,16 +103,15 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 450px;
-    height: 700px;
+    width: 550px;
+    height: 800px;
     background-color: white;
     box-shadow: 6px 0px 12px #000000A3;
 }
 
 .profile-table{
     border: 1px solid black;
-    width: 439px;
-    margin-top: 25px;
+    width: 539px;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-left: 5px;   
@@ -121,5 +120,13 @@
 .profile-table:hover{
     background-color: wheat;
 }
+
+.tabletd1{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    width: 200px;
+}
+
+
 
 
