--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -9,11 +9,19 @@
     display:flex;
     flex-direction: column;
     align-items: center;
-    width: 380px;
-    height: 800px;
+    width: 650px;
+    height: 500px;
     background-color: white;
     box-shadow: 6px 0px 12px #000000A3;
     margin-bottom: 20px !important;
+    margin-top: 100px;
+}
+
+.profile-content-row{
+    display:flex;
+    flex-direction: row;
+    margin: auto;
+   
 }
 
 .profile-edit{
@@ -33,19 +41,25 @@
 .profile-show{
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    margin: auto;
     height: 700px;
     margin-top: 50px;
     margin-bottom: 200px;
+    width: 80%;
+    justify-content: space-around;
+    
  
 }
 
 .profile-photo{
     width: 230px;
-    height: 150px;
+    height: 200px;
     border-radius: 10%;
     margin-top: 35px;
     margin-bottom: 25px;
+    margin: auto;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
 .profile-text{
@@ -57,6 +71,7 @@
     padding-top: 10px;
     padding-bottom: 10px;
     padding-left: 10px;
+    margin-right: 50px;
 }
 
 /* .nav{
@@ -83,6 +98,7 @@
     width: 220px;
     margin-top: 25px;
     height: 35px;
+    border: none;
     background: transparent linear-gradient(293deg, #302113 0%, #904414 100%) 0% 0% no-repeat padding-box;
     box-shadow: 0px 0px 12px #0000005C;
     color:white;
@@ -104,9 +120,10 @@
     flex-direction: column;
     align-items: center;
     width: 550px;
-    height: 800px;
+    height: auto;
     background-color: white;
     box-shadow: 6px 0px 12px #000000A3;
+    margin-top: 100px;
 }
 
 .profile-table{
@@ -114,7 +131,8 @@
     width: 539px;
     padding-top: 10px;
     padding-bottom: 10px;
-    margin-left: 5px;   
+    margin-left: 5px;
+    cursor: pointer;   
 }
 
 .profile-table:hover{
