--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -150,7 +150,8 @@
 .tabletd1{
     overflow: hidden;
     text-overflow: ellipsis;
-    width: 200px;
+    width: auto;
+    padding-right: 30px;
 }
 
 
