--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -1,5 +1,19 @@
  @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Shippori+Antique+B1&display=swap');
 
+ .imgbackprof{
+    margin-top: -40px !important;
+    z-index: -1;
+    display: flex;
+    background-size: cover;
+    width: 100%;
+    height: 650px;
+    margin: 0px;
+    opacity: 0.8;
+    position: absolute;  
+    margin-left: -53px !important;
+ }
+
+
 .the-chosen-lessons{
     width: 50%;
     margin: auto;
@@ -15,12 +29,14 @@
     box-shadow: 6px 0px 12px #000000A3;
     margin-bottom: 20px !important;
     margin-top: 100px;
+    border-radius: 5px;
 }
 
 .profile-content-row{
     display:flex;
     flex-direction: row;
     margin: auto;
+    margin-left: 20px;
    
 }
 
@@ -43,9 +59,8 @@
     flex-direction: row;
     margin: auto;
     height: 700px;
-    margin-top: -3px;
-    margin-bottom: 200px;
     justify-content: space-around; 
+    padding-left: 5px;
  
 }
 
@@ -132,15 +147,18 @@
     background-color: white;
     box-shadow: 6px 0px 12px #000000A3;
     margin-top: 100px;
+    margin-left: -40px;
+    border-radius: 5px;
 }
 
 .profile-table{
     border: 1px solid black;
-    width: 539px;
+    width: 514px;
     padding-top: 10px;
     padding-bottom: 10px;
     margin-left: 5px;
     cursor: pointer;   
+    border-radius: 5px;
 }
 
 .profile-table:hover{
@@ -151,7 +169,8 @@
     overflow: hidden;
     text-overflow: ellipsis;
     width: auto;
-    padding-right: 30px;
+    padding-right: 35px;
+
 }
 
 
