--- a/frontend/src/css/Payment.css
+++ b/frontend/src/css/Payment.css
@@ -22,7 +22,7 @@
     display: flex;
     background-size: cover;
     width: 100%;
-    height: 650px;
+    height: 750px;
     margin: 0px;
     opacity: 0.8;
     position: absolute;
@@ -88,16 +88,16 @@ form {
 
 .credit-card{
   /* z-index: 3; */
-  border: 1px solid;
+  position: relative;
   border-radius: 10px;
     background-color: wheat !important;
     display: flex;
     flex-direction: column;
-    border: 1px solid gray;
+    border: none;
     width: 40%;
     padding-top: 30px;
-    margin-top: 100px !important;
     margin-bottom: 100px !important;
+    margin-top: 100px !important;
     margin: auto;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
@@ -153,6 +153,11 @@ form {
   transform: scale(1.04);
   background: linear-gradient(#171009, #3b2814);
   text-shadow: none;
+}
+
+.cvvstyle{
+  box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0) !important;
+  cursor:text !important;
 }
 
 
