--- a/frontend/src/css/Payment.css
+++ b/frontend/src/css/Payment.css
@@ -11,24 +11,12 @@
     transform: rotateY(0deg);
     background-color: red;
   }
-  /* .back {
+  .back {
     position: relative;
     transform: rotateY(180deg);
     background-color: yellow;
-  } */
-  .payment-image {
-    margin-top: -40px !important;
-    z-index: -1;
-    display: flex;
-    background-size: cover;
-    width: 100%;
-    height: 750px;
-    margin: 0px;
-    opacity: 0.8;
-    position: absolute;
-}
+  }
   .rccs__card {
-   
     height: 182.873px;
     position: relative;
     -webkit-transform-style: preserve-3d;
@@ -37,7 +25,6 @@
     transition: all 0.4s linear;
     width: 290px;
     margin-bottom: 0px;
-    margin-top: 10px;
   }
   
   .front1 {
@@ -87,17 +74,17 @@ form {
 }
 
 .credit-card{
-  /* z-index: 3; */
-  position: relative;
-  border-radius: 10px;
-    background-color: wheat !important;
+    background-color: wheat;
+    position: absolute;
+    left: 500px;
+    top: 50px;
     display: flex;
     flex-direction: column;
-    border: none;
+    border: 1px solid gray;
     width: 40%;
     padding-top: 30px;
-    margin-bottom: 100px !important;
     margin-top: 100px !important;
+    margin-bottom: 100px !important;
     margin: auto;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
 }
@@ -160,7 +147,6 @@ form {
   cursor:text !important;
 }
 
-
 .form-control2{
   box-shadow: none;
   height: 35px;
@@ -187,8 +173,7 @@ form {
   margin-bottom: -30px;
 }
 
-#allWebsite{
-  margin-top:-50px !important;
-  padding-top: 50px;
-
+.nav{
+  position: relative;
 }
+
