--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -10,7 +10,7 @@
     margin: 0px;
     opacity: 0.8;
     position: absolute;  
-    margin-left: -53px !important;
+    margin-left: -65px !important;
  }
 
 
@@ -59,6 +59,7 @@
     flex-direction: row;
     margin: auto;
     height: 700px;
+    margin-bottom: 100px;
     justify-content: space-around; 
     padding-left: 5px;
  
