--- a/frontend/src/css/Navbar.css
+++ b/frontend/src/css/Navbar.css
@@ -6,6 +6,7 @@
     transition-timing-function: ease-in;
     transition: all 0.5s;
     text-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    height: 100px;
    
 
 }
@@ -13,6 +14,7 @@
 .nav_wood {
     background-color: #171009;
     z-index: 3;
+    
 }
 
 .nav-components {
