--- a/frontend/src/css/ProfileTrainee.css
+++ b/frontend/src/css/ProfileTrainee.css
@@ -66,13 +66,11 @@
 }
 
 .profile-photo{
-    width: 230px;
-    height: 200px;
+    width: 40%;
+    height: 250px;
     border-radius: 10%;
-    margin-bottom: 25px;
-    margin: auto;
-    margin-right: 30px;
-    margin-left: 30px;
+    margin: 20px;
+    
 }
 
 .profile-text{
