--- a/frontend/src/css/Payment.css
+++ b/frontend/src/css/Payment.css
@@ -75,18 +75,16 @@ form {
 
 .credit-card{
     background-color: wheat;
-    position: absolute;
-    left: 500px;
-    top: 50px;
     display: flex;
     flex-direction: column;
     border: 1px solid gray;
     width: 40%;
     padding-top: 30px;
-    margin-top: 100px !important;
-    margin-bottom: 100px !important;
     margin: auto;
     box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0);
+    position: absolute;
+    left: 465px;
+    top: 120px;
 }
 
 .form-control{
@@ -142,10 +140,6 @@ form {
   text-shadow: none;
 }
 
-.cvvstyle{
-  box-shadow: 1px 2px 6px rgba(0, 0, 0), 1px 2px 4px rgba(0, 0, 0) !important;
-  cursor:text !important;
-}
 
 .form-control2{
   box-shadow: none;
@@ -173,7 +167,12 @@ form {
   margin-bottom: -30px;
 }
 
-.nav{
-  position: relative;
+#navbar{
+ 
+  top:1px;
 }
 
+.payment-image{
+  margin-top: 100px;
+  margin-left: -5px;
+}
