--- a/frontend/src/css/Lessons.css
+++ b/frontend/src/css/Lessons.css
@@ -47,7 +47,7 @@
 .sign-in-request{
     color: wheat;
     width:auto;
-    border-radius: 20px;
+    border-radius: 0.2vw;
     height: 20px;
     margin: auto;
     background-color: #171009;
